# prometheus

./: .gitignore  CLAUDE.md  README.md  deploy.sh  prometheus-daemon.service  pyproject.toml  results  start.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  operational-validators.yml
configs/: regime_adaptation.yaml  v12_strategy_overrides.json
configs/execution/: policy.yaml
configs/geo/: nations.yaml  positions.yaml  relationships.yaml  series.yaml
configs/meta/: books.yaml  market_situation.yaml  policy.yaml
configs/nation/: ago_macro_series.yaml  are_macro_series.yaml  arg_macro_series.yaml  aus_macro_series.yaml  aut_macro_series.yaml  bel_macro_series.yaml  bgd_macro_series.yaml  bgr_macro_series.yaml  bol_macro_series.yaml  bra_macro_series.yaml  brn_macro_series.yaml  bwa_macro_series.yaml  can_macro_series.yaml  che_macro_series.yaml  chl_macro_series.yaml  chn_macro_series.yaml  civ_macro_series.yaml  cmr_macro_series.yaml  cod_macro_series.yaml  col_macro_series.yaml  cri_macro_series.yaml  cze_macro_series.yaml  deu_macro_series.yaml  dnk_macro_series.yaml  dom_macro_series.yaml  ecu_macro_series.yaml  egy_macro_series.yaml  esp_macro_series.yaml  est_macro_series.yaml  eth_macro_series.yaml  fin_macro_series.yaml  fra_macro_series.yaml  gab_macro_series.yaml  gbr_macro_series.yaml  geo_macro_series.yaml  gha_macro_series.yaml  gin_macro_series.yaml  grc_macro_series.yaml  gtm_macro_series.yaml  hrv_macro_series.yaml  (+60 more)
configs/portfolio/: conviction.yaml  core_long_eq_daily.yaml
configs/sector/: allocator.yaml  crisis_alpha.yaml
data/: breadth_daily.csv  finra_margin_stats_clean.csv  fred_oas_hy.csv  fred_oas_ig.csv  lambda_cluster_scores_multihorizon_US_EQ.csv  lambda_model_US_EQ.joblib  lambda_model_US_EQ.json  lambda_predictions_US_EQ.csv  lambda_predictions_US_EQ_cpp.csv
data/fred/: dfii10.csv  dgs10.csv  dgs2.csv  dgs3mo.csv  fedfunds.csv  icsa.csv  stlfsi2.csv  unrate.csv  vixcls.csv
data/health_reports/: health_2026-04-02_EU_EQ.txt  health_2026-04-02_HK_EQ.txt  health_2026-04-02_JP_EQ.txt  health_2026-04-02_KR_EQ.txt  health_2026-04-02_UK_EQ.txt  health_2026-04-03_AU_EQ.txt  health_2026-04-03_EU_EQ.txt  health_2026-04-03_HK_EQ.txt  health_2026-04-03_JP_EQ.txt  health_2026-04-03_KR_EQ.txt  health_2026-04-03_UK_EQ.txt  health_2026-04-06_AU_EQ.txt  health_2026-04-06_EU_EQ.txt  health_2026-04-06_HK_EQ.txt  health_2026-04-06_JP_EQ.txt  health_2026-04-06_KR_EQ.txt  health_2026-04-06_UK_EQ.txt  health_2026-04-07_EU_EQ.txt  health_2026-04-07_HK_EQ.txt  health_2026-04-07_JP_EQ.txt  health_2026-04-07_KR_EQ.txt  health_2026-04-07_UK_EQ.txt  health_2026-04-08_AU_EQ.txt  health_2026-04-08_EU_EQ.txt  health_2026-04-08_HK_EQ.txt  health_2026-04-08_JP_EQ.txt  health_2026-04-08_KR_EQ.txt  health_2026-04-08_UK_EQ.txt  health_2026-04-09_AU_EQ.txt  health_2026-04-09_EU_EQ.txt  health_2026-04-09_HK_EQ.txt  health_2026-04-09_JP_EQ.txt  health_2026-04-09_KR_EQ.txt  health_2026-04-09_UK_EQ.txt  health_2026-04-10_AU_EQ.txt  health_2026-04-10_EU_EQ.txt  health_2026-04-10_HK_EQ.txt  health_2026-04-10_JP_EQ.txt  health_2026-04-10_KR_EQ.txt  health_2026-04-10_UK_EQ.txt  (+37 more)
deploy/: prometheus-api.service
deploy/nginx/: apatheon.conf  apathis.conf  prometheus.conf
docs/: DEVLOG.md  RECOVERY.md  REFACTOR_PLAN.md  sector_put_vs_sh_analysis.md
migrations/versions/: 0026_meta_intelligence_tables.py  0028_news_factors_daily.py  0029_issuer_classifications.py  0030_instrument_identifiers.py  0031_markets_and_market_holidays_constraints.py  0032_issuers_instruments_l0.py  0033_strategies_portfolios_l0.py  0034_strategy_configs_versioned.py  0035_config_change_log_l0.py  0036_meta_config_proposals_l0.py  0037_data_ingestion_status_l0.py  0038_job_executions_l0.py  0039_engine_runs_l0.py  0040_prices_daily_l1.py  0041_returns_daily_l1.py  0042_volatility_daily_l1.py  (+48 more)
prometheus/: __init__.py
prometheus_web/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: compare_engine_variants.py
static/: index.html
tests/: conftest.py  test_assessment_model.py  test_audit_fixes.py  test_bug_fixes.py  test_config_loading.py  test_data_quality.py  test_execution_api.py  test_execution_api_persistence.py  test_ibkr_client_impl_account_fallback.py  test_monitoring_api.py  test_order_planner.py  test_pipeline_state.py  test_reaudit_fixes.py  test_remediation_p0.py  test_risk_broker.py  test_show_alembic_status.py  test_smoke.py  test_storage.py  test_third_pass_audit.py
tools/: daily_workflow_template.sh  run_daily_gates.sh
(+486 files in other folders)
